--- a/Verkefni-1/Verkefni-1/index.html
+++ b/Verkefni-1/Verkefni-1/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>VefsíðuTest1</title>
         <meta charset="utf-8">
-        <link href="stilsida.css" rel="stylesheet" />
+        <link href="Stilsida.css" rel="stylesheet" />
         <a href="index.html" title="Næsta Síða">Síða 1</a>
         <a href="sida2.html" title="Næsta Síða">Síða 2</a>
     </head>
