--- a/Verkefni-3/verkefni-3.2/index.html
+++ b/Verkefni-3/verkefni-3.2/index.html
@@ -21,16 +21,16 @@
                 <nav>
                     <ul class="nav">
                         <li>
-                            <a href="index.html">Html og CSS</a>
+                            <a href="index.html">Sida 1</a>
                         </li>
                         <li>
-                            <a href="../../Verkefni - 3.3/Síða 2/index.html">Box modelið</a>
+                            <a href="../../verkefni-3.3/sida2/index.html">Sida 2</a>
                         </li>
                         <li>
-                            <a href="../../Verkefni - 3.3/Síða 3/index.html">Leturfræði</a>
+                            <a href="../../verkefni-3.3/sida3/index.html">Sida 3</a>
                         </li>
                         <li>
-                            <a href="index.html">Efnisyfirlið</a>
+                            <a href="../../verkefni-3.1/">Verkefni 3.1</a>
                         </li>
                         <li>
                             <a href="index.html">Myndvinnsla</a>
