--- a/Verkefni-3/verkefni-3.2/index.html
+++ b/Verkefni-3/verkefni-3.2/index.html
@@ -24,13 +24,13 @@
                             <a href="index.html">Sida 1</a>
                         </li>
                         <li>
-                            <a href="../../verkefni-3.3/sida2/index.html">Sida 2</a>
+                            <a href="../verkefni-3.3/sida2/index.html">Sida 2</a>
                         </li>
                         <li>
-                            <a href="../../verkefni-3.3/sida3/index.html">Sida 3</a>
+                            <a href="../verkefni-3.3/sida3/index.html">Sida 3</a>
                         </li>
                         <li>
-                            <a href="../../verkefni-3.1/">Verkefni 3.1</a>
+                            <a href="../verkefni-3.1/">Verkefni 3.1</a>
                         </li>
                         <li>
                             <a href="index.html">Myndvinnsla</a>
