--- a/Verkefni-3/verkefni-3.2/index.html
+++ b/Verkefni-3/verkefni-3.2/index.html
@@ -21,7 +21,7 @@
                 <nav>
                     <ul class="nav">
                         <li>
-                            <a href="index.html">Sida 1</a>
+                            <a href="../verkefni-3.2/index.html">Sida 1</a>
                         </li>
                         <li>
                             <a href="../verkefni-3.3/sida2/index.html">Sida 2</a>
