--- a/Verkefni-3/verkefni-3.3/sida3/index.html
+++ b/Verkefni-3/verkefni-3.3/sida3/index.html
@@ -16,13 +16,13 @@
         <div class="container">
             <div class="navigation">
                 <div>
-                    <a href="../../Verkefni - 3.2/Síða 1/index.html">Html og CSS</a>
+                    <a href="../verkefni-3.2/index.html">Sida 1</a>
                 </div>
                 <div>
-                    <a href="../Síða 2/index.html">Box modelið</a>
+                    <a href="../verkefni-3.3/sida2/index.html">Sida 2</a>
                 </div>
                 <div>
-                    <a href="../Síða 3/index.html">Leturfræði</a>
+                    <a href="../verkefni-3.3/sida3/index.html">Sida 3</a>
                 </div>
                 <div>
                     Efnisyfirlit
