--- a/Verkefni-3/verkefni-3.3/sida2/index.html
+++ b/Verkefni-3/verkefni-3.3/sida2/index.html
@@ -20,13 +20,13 @@
 
             <div class="navigation">
                 <div>
-                    <a href="../verkefni-3.2/index.html">Sida 1</a>
+                    <a href="../../verkefni-3.2/index.html">Sida 1</a>
                 </div>
                 <div>
-                    <a href="../verkefni-3.3/sida2/index.html">Sida 2</a>
+                    <a href="../../verkefni-3.3/sida2/index.html">Sida 2</a>
                 </div>
                 <div>
-                    <a href="../verkefni-3.3/sida3/index.html">Sida 3</a>
+                    <a href="../../verkefni-3.3/sida3/index.html">Sida 3</a>
                 </div>
                 <div>
                     Efnisyfirlit
