--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.1/">Verkefni 3.1</a></li>
                 		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.2/">Verkefni 3.2</a></li>
                 		<li><a class="skipta" href="https://zkur1.github.io/Verkefni-3/verkefni-3.3/sida2/index.html">Verkefni 3.3</a></li>
-						<li><a class="skipta" href="https://zkur1.github.io/Verkefni-4/">Verkefni 4</a></li>
+				<li><a class="skipta" href="https://zkur1.github.io/Verkefni-4/">Verkefni 4</a></li>
+				<li><a class="skipta" href="https://zkur1.github.io/Lokaverkefni_2019/vefsíða</a></li>
             		</ul>
         		</nav>
 			</footer>
