--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -17,14 +17,30 @@
             </div>
 
             <div class="main">
-                <ul>
-                    <li>
-                        baby
-                    </li>
-                    <li>
-                        baby
-                    </li>
-                </ul>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Langi Jón :: FR-001</a>
+                    <img class="red_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintgreen.png" alt="red_dot">
+                </div>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Bróðir feita Jóns :: FR-002</a>
+                    <img class="green_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintred.png" alt="green_dot">
+                </div>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Feiti Jón :: FR-003</a>
+                    <img class="red_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintgreen.png" alt="red_dot">
+                </div>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Borvél :: FR-004</a>
+                    <img class="red_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintgreen.png" alt="red_dot">
+                </div>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Stigi :: FR-005</a>
+                    <img class="red_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintgreen.png" alt="red_dot">
+                </div>
+                <div class="tool_section">
+                    <a href="langijon/langijon.html">Kútur :: FR-006</a>
+                    <img class="red_dot" src="C:\Users\askur\Desktop\Skóli\Vefþróun\gjg-vef1-h2-2018-Zkur1-master\Lokaverkefni_2019\myndir/paintgreen.png" alt="red_dot">
+                </div>
             </div>
 
             <div class="navigation">
