--- a/Lokaverkefni_2019/vefsiða/vinnusvæði/vinnusvaedi.html
+++ b/Lokaverkefni_2019/vefsiða/vinnusvæði/vinnusvaedi.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Fagraf App">
         <meta name="author" content="Askur Hugi">
         <title>FagrafAPP</title>
-        <link rel="stylesheet" type="text/css" href="bifreiðir-style.css">
+        <link rel="stylesheet" type="text/css" href="vinnusvaedi-style.css">
         <link rel="stylesheet" type="text/css" href="normalize.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Slabo+27px|Srisakdi" rel="stylesheet">
     </head>
@@ -22,10 +22,10 @@
                     <a href="../index.html">Verkfæri</a>
                 </div>
                 <div>
-                    <a href="bifreiðir.html">Bifreiðir</a>
+                    <a href="../bifreiðir/bifreiðir.html">Bifreiðir</a>
                 </div>
                 <div>
-                    <a href="../vinnusvæði/vinnusvaedi.html">Vinnusvæði</a>
+                    <a href="vinnusvaedi.html">Vinnusvæði</a>
                 </div>
                 <div>
                     <a href="../starfsmenn/starfsmenn.html">Starfsmenn</a>
