--- a/Lokaverkefni_2019/vefsiða/index - Copy.html
+++ b/Lokaverkefni_2019/vefsiða/index - Copy.html
@@ -68,7 +68,14 @@
                     <li>
                         <a href="starfsmenn/starfsmenn.html">Starfsmenn</a>
                     </li>
+                    <li>
+                        Stillingar
+                    </li>
                 </ul>
+            </div>
+
+            <div class="main">
+                
             </div>
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
