--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -24,30 +24,25 @@
             </div>
 
             <div class="navigation">
-                <div>
-                    <a href="../index.html">Verkfæri</a>
-                </div>
-                <div>
-                    <a href="../bifreiðir/bifreiðir.html">Bifreiðir</a>
-                </div>
-                <div>
-                    <a href="../vinnusvæði/vinnusvaedi.html">Vinnusvæði</a>
-                </div>
-                <div>
-                    <a href="../starfsmenn/starfsmenn.html">Starfsmenn</a>
-                </div>
-                <div>
-                    Stillingar
-                </div>
-            </div>
-
-            <div class="main">
-                
+                <ul>
+                    <li>
+                        <a href="../index.html">Verkfæri</a>
+                    </li>
+                    <li>
+                        <a href="../bifreiðir/bifreidir.html">Bifreiðir</a>
+                    </li>
+                    <li>
+                        <a href="../starfsmenn/starfsmenn.html">Starfsmenn</a>
+                    </li>
+                    <li>
+                        <a href="../stillingar/stillingar.html">Stillingar</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
-        <script src="../verkfaeri_scripts.js"></script>
+        <script src="../index_scripts.js"></script>
         <script src="verkfaeri_default_scripts.js"></script>
     </body>
 </html>
