--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -20,7 +20,7 @@
             <div class="main">
                 <div class="settings">
                     <div class="staff_nr">
-                        <span>Starfsmannanúmer (FR:xxx):</span>
+                        <span>Starfsmannanúmer (FRS-xxx):</span>
                         <input type="textfield" class="user_name_in">
                         <button id="save_button"> Vista </button>
                     </div>
