--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -23,6 +23,18 @@
                 <img class="tool_logo" src="../../myndir/wrench.jpg">
             </div>
 
+            <button class="button_history">Saga verkfæris</button>
+
+            <div class="in_stock">
+                <h2>Skrá á starfsmann:</h2>
+                <div class="staff_nr">
+                    <span>Starfsmannanúmer (FRS-xxx):</span>
+                    <input type="textfield" class="user_name_in" value="FRS-">
+                </div>
+                
+                <button class="save_button"> Skrá út</button>
+            </div>
+
             <div class="navigation">
                 <ul>
                     <li>
