--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -21,6 +21,16 @@
                 </div>
                 <img class="car_logo" src="../../../myndir/vito.jpg">
             </div>
+            
+            <div class="in_stock">
+                <h2>Skrá á starfsmann:</h2>
+                <div class="staff_nr">
+                    <span>Starfsmannanúmer (FRS-xxx):</span>
+                    <input type="textfield" class="user_name_in" value="FRS-">
+                </div>
+                
+                <button class="save_button"> Skrá út</button>
+            </div>
 
             <div class="navigation">
                 <ul>
