--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
@@ -20,7 +20,7 @@
                 <div id="description" class="description">
                     <p id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci incidunt molestiae porro odit illum modi fugit? Nemo, commodi. Atque natus reprehenderit architecto laborum ipsam cumque, facere veniam non possimus error.</p>
                 </div>
-                <img class="user_logo" src="../../../myndir/Reynir.png">
+                <img class="user_logo" src="../../../myndir/Tumi1.png">
             </div>
 
             <div class="navigation">
