--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -21,7 +21,7 @@
                 <div class="settings">
                     <div class="staff_nr">
                         <span>Starfsmannanúmer (FRS-xxx):</span>
-                        <input type="textfield" class="user_name_in">
+                        <input type="textfield" class="user_name_in" value="FRS-">
                         <button id="save_button"> Vista </button>
                     </div>
                     <div class="staff_nr">
@@ -31,7 +31,7 @@
                     </div>
                     <div class="staff_nr">
                         <span>Verknúmer (FR-xxx):</span>
-                        <input type="textfield" class="user_name_in">
+                        <input type="textfield" class="user_name_in" value="FR-">
                         <button id="save_button"> Vista </button>
                     </div>
                 </div>
