--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -30,6 +30,16 @@
                     </div>
                     <button class="save_button">Bæta við</button>
                 </div>
+                <div class="dropdown_remove" id="dropdown_remove">
+                    <h2>Eyða verkfæri: </h2>
+                    <div class="add_menu">
+                        <span>Nafn verkfæris: </span>
+                        <input type="textfield" class="tool_name_in">
+                        <span>Fjöldi: </span>
+                        <input type="textfield" class="tool_count" value="1">
+                    </div>
+                    <button class="remove_button">Eyða</button>
+                </div>
             </div>
 
             <div class="searchbar">
@@ -41,7 +51,7 @@
                 </ul>
             </div>
 
-            <div class="navigation">
+            <div class="navigation" id="navigation">
                 <ul>
                     <li>
                         <a href="index.html">Verkfæri</a>
