--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -32,7 +32,7 @@
                     <button class="save_button"> Skrá út</button>
                 </div>
             </div>  
-            <div class="navigation">
+            <div class="navigation" id="navigation">
                 <ul>
                     <li>
                         <a href="../../index.html">Verkfæri</a>
@@ -45,6 +45,23 @@
                     </li>
                     <li>
                         <a href="../../stillingar/stillingar.html">Stillingar</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="m_navigation" id="m_navigation">
+                <ul id="nav_ul">
+                    <li id="verkfaeri">
+                        <img class="icon" src="../../../myndir/tools.png" id="tool_icon">
+                    </li>
+                    <li id="bifreidir">
+                        <img class="icon" src="../../../myndir/car1.png" id="car_icon">
+                    </li >
+                    <li id="starfsmenn">
+                        <img class="icon" src="../../../myndir/staff.svg" id="staff_icon">
+                    </li>
+                    <li id="stillingar">
+                        <img class="icon" src="../../../myndir/settings.png" id="settings_icon">
                     </li>
                 </ul>
             </div>
