--- a/Lokaverkefni_2019/vefsiða/index.html
+++ b/Lokaverkefni_2019/vefsiða/index.html
@@ -74,7 +74,7 @@
                         <img class="icon" src="../myndir/tools.png" id="tool_icon">
                     </li>
                     <li id="bifreidir">
-                        <img class="icon" src="../myndir/car.png" id="car_icon">
+                        <img class="icon" src="../myndir/car1.png" id="car_icon">
                     </li >
                     <li id="starfsmenn">
                         <img class="icon" src="../myndir/staff.svg" id="staff_icon">
