--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
@@ -23,7 +23,7 @@
                 <img class="user_logo" src="../../../myndir/Tumi1.png">
             </div>
 
-            <div class="navigation">
+            <div class="navigation" id="navigation">
                 <ul>
                     <li>
                         <a href="../../index.html">Verkfæri</a>
@@ -36,6 +36,23 @@
                     </li>
                     <li>
                         <a href="../../stillingar/stillingar.html">Stillingar</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="m_navigation" id="m_navigation">
+                <ul id="nav_ul">
+                    <li id="verkfaeri">
+                        <img class="icon" src="../../../myndir/tools.png" id="tool_icon">
+                    </li>
+                    <li id="bifreidir">
+                        <img class="icon" src="../../../myndir/car1.png" id="car_icon">
+                    </li >
+                    <li id="starfsmenn">
+                        <img class="icon" src="../../../myndir/staff.svg" id="staff_icon">
+                    </li>
+                    <li id="stillingar">
+                        <img class="icon" src="../../../myndir/settings.png" id="settings_icon">
                     </li>
                 </ul>
             </div>
