--- a/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
+++ b/Lokaverkefni_2019/vefsiða/stillingar/stillingar.html
@@ -38,7 +38,7 @@
               
             </div>
 
-            <div class="navigation">
+            <div class="navigation" id="navigation">
                 <ul>
                     <li>
                         <a href="../index.html">Verkfæri</a>
@@ -50,7 +50,24 @@
                         <a href="../starfsmenn/starfsmenn.html">Starfsmenn</a>
                     </li>
                     <li>
-                        <a href="stillingar.html">Stillingar</a>
+                        <a href="../stillingar/stillingar.html">Stillingar</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="m_navigation" id="m_navigation">
+                <ul id="nav_ul">
+                    <li id="verkfaeri">
+                        <img class="icon" src="../../myndir/tools.png" id="tool_icon">
+                    </li>
+                    <li id="bifreidir">
+                        <img class="icon" src="../../myndir/car1.png" id="car_icon">
+                    </li >
+                    <li id="starfsmenn">
+                        <img class="icon" src="../../myndir/staff.svg" id="staff_icon">
+                    </li>
+                    <li id="stillingar">
+                        <img class="icon" src="../../myndir/settings.png" id="settings_icon">
                     </li>
                 </ul>
             </div>
