--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -54,6 +54,23 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="m_navigation" id="m_navigation">
+                <ul id="nav_ul">
+                    <li id="verkfaeri">
+                        <img class="icon" src="../../myndir/tools.png" id="tool_icon">
+                    </li>
+                    <li id="bifreidir">
+                        <img class="icon" src="../../myndir/car1.png" id="car_icon">
+                    </li >
+                    <li id="starfsmenn">
+                        <img class="icon" src="../../myndir/staff.svg" id="staff_icon">
+                    </li>
+                    <li id="stillingar">
+                        <img class="icon" src="../../myndir/settings.png" id="settings_icon">
+                    </li>
+                </ul>
+            </div>
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
