--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -24,7 +24,7 @@
                     <img class="tool_logo" src="../../myndir/wrench.jpg">
                 </div>
 
-                <button class="button_history">Saga verkfæris</button>
+                <button id="history_button" class="history_button">Saga verkfæris</button>
 
                 <div id="in_stock" class="in_stock">
                     <h1 class="tool_in_stock">Verkfæri er á lager</h1>
@@ -43,6 +43,8 @@
 
                 <div id="out_of_stock" class="out_of_stock">
                     <h1 class="tool_out_of_stock">Verkfæri er í útláni</h1>
+                    <h3 id="inUseBy_text"></h3>
+                    <h3 id="projectID_text" class="projectID_text"></h3>
                     <h2>Skrá á lager:</h2>
                     <div class="staff_nr">
                         <span>Starfsmannanúmer (FRS-xxx):</span>
