--- a/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
@@ -56,7 +56,7 @@
                     <input type="textfield" id="search_bar" placeholder="Leita að starfsmanni" onkeyup="searchDropdown()">
             </div>
 
-            <div class="main">
+            <div class="main" id="main">
                 <ul class="staff_section" id="user_list">
                     
                 </ul>
