--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -24,7 +24,10 @@
                     </div>
                     <img class="tool_logo" src="../../myndir/wrench.jpg">
                 </div>
-
+                <div class="photo_upload">
+                    <progress value="0" max="100" id="uploader" class="progress_bar">0%</progress>
+                    <input type="file" value="upload" id="upload_button">
+                </div>
                 <button id="history_button" class="history_button">Saga verkfæris</button>
 
                 <div id="in_stock" class="in_stock">
