--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -23,6 +23,21 @@
                     <img class="car_logo" src="../../../myndir/vito.jpg">
                 </div>
                 
+                <div class="maintenance" id="maintenance">
+                    <h2>Viðhald:</h2>
+                    <div class="maintenance_info">
+                        <span>Skoðun:</span>
+                        <span>20/08/2019:</span>
+                        <input type="textfield" value="FRS-">
+                        <span>Smurning:</span>
+                        <span>20000:</span>
+                        <input type="textfield" value="FRS-">
+                        <span>Dekkjaskipti:</span>
+                        <span>20/08/2019:</span>
+                        <input type="textfield"  value="FRS-">
+                    </div>
+                </div>
+
                 <div class="in_stock">
                     <h2>Skrá á starfsmann:</h2>
                     <div class="staff_nr">
