--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -27,21 +27,25 @@
                     <h2>Viðhald:</h2>
                     <div class="maintenance_info" id="maintenance_info">
                         <span>Skoðun:</span>
-                        <span class="current_maintenance" id="checkup_date" style="display: block;">20/08/2019</span>
+                        <span class="current_maintenance" id="checkup_date" style="display: block;">00/00/0000</span>
                         <input class="new_maintenance" id="new_checkup_date" placeholder="00/00/0000">
                         <button class="update_maintenance" id="checkup_date_button">Uppfæra dags.</button>
+                        <button class="save_maintenance" id="save_checkup_date_button">Vista dags.</button>
 
                         <span>Smurning:</span>
-                        <span class="current_maintenance" id="oil_change" style="display: block;">200.000km</span>
+                        <span class="current_maintenance" id="oil_change" style="display: block;">000.000km</span>
                         <input class="new_maintenance" id="new_oil_change" placeholder="000.000km">
                         <button class="update_maintenance" id="oil_change_button">Uppfæra km.</button>
+                        <button class="save_maintenance" id="save_oil_change_button">Vista km.</button>
 
                         <span>Dekkjaskipti:</span>
-                        <span class="current_maintenance" id="tire_change" style="display: block;">20/08/2019</span>
+                        <span class="current_maintenance" id="tire_change" style="display: block;">00/00/0000</span>
                         <input class="new_maintenance" id="new_tire_change" placeholder="00/00/0000">
                         <button class="update_maintenance" id="tire_change_button">Uppfæra dags.</button>
+                        <button class="save_maintenance" id="save_tire_change_button">Vista dags.</button>
                         
                         <button class="cancel_button" id="cancel_button">Hætta við</button>
+                        <button class="history_button" id="history_button">Saga Viðhalds</button>                    
                     </div>
                 </div>
 
