--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_saga/verkfaeri_saga.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_saga/verkfaeri_saga.html
@@ -32,7 +32,7 @@
                         <a href="../../bifreiðir/bifreidir.html">Bifreiðir</a>
                     </li>
                     <li>
-                        <a href="../starfsmenn.html">Starfsmenn</a>
+                        <a href="../../starfsmenn/starfsmenn.html">Starfsmenn</a>
                     </li>
                     <li>
                         <a href="../../stillingar/stillingar.html">Stillingar</a>
