Sick bifreiðir done

--- a/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/starfsmenn.html
@@ -24,17 +24,19 @@
                     <h2>Bæta við starfsmanni: </h2>
                     <div class="add_menu" id="add_menu">
                         <span>Nafn: </span>
-                        <input type="text" id="staff_name_in" name="staff_name_in">
+                        <input type="text" id="staff_name_in">
+                        <span>Kennitala: </span>
+                        <input type="text" id="staff_individual_id_in">
                         <span>FRS-Númer: </span>
-                        <input type="text" id="staff_id_in" value="FRS-" name="staff_id_in">
+                        <input type="text" id="staff_id_in" value="FRS-">
                         <span>Farsími: </span>
-                        <input type="text" id="staff_mobile_in" name="staff_mobile_in">
+                        <input type="text" id="staff_mobile_in">
                         <span>Sími: </span>
-                        <input type="text" id="staff_phoneNr_in" name="staff_phoneNr_in">
+                        <input type="text" id="staff_phoneNr_in">
                         <span>Netfang: </span>
-                        <input type="text" id="staff_email_in" value="" name="staff_email_in">
+                        <input type="text" id="staff_email_in" value="">
                         <span>Starfstitill: </span>
-                        <input type="text" id="staff_position_in" value="" name="staff_position_in">        
+                        <input type="text" id="staff_position_in" value="" >        
                     </div>
                     <button class="save_button" id="save_button">Bæta við</button>
                 </div>
