--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 
-                <div id="photo_upload" class="photo_upload">
+                <div id="photo_upload" class="photo_upload" style="display: none;">
                     <progress value="0" max="100" id="uploader" class="progress_bar">0%</progress>
                     <input type="file" value="upload" id="upload_button" class="file_in">
                 </div>
