--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
@@ -19,9 +19,24 @@
             <div class="main" id="main">
                 <div class="staff_description" id="staff_description">
                     <div id="description" class="description">
-                        <p id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci incidunt molestiae porro odit illum modi fugit? Nemo, commodi. Atque natus reprehenderit architecto laborum ipsam cumque, facere veniam non possimus error.</p>
+                        <div id="description_text_div" class="description_text_div">
+                            <p id="description_text" class="description_text" contenteditable="true"></p>
+                            <div class="desc_buttons">
+                                <button id="desc_save_button" class="save_text_button" style="display: none;">Vista</button>
+                                <button id="desc_cancel_button" class="remove_button" style="display: none;">Hætta við</button> 
+                            </div>  
+                        </div>
                     </div>
-                    <img class="staff_logo" src="../../../myndir/Tumi1.png">
+                    <div class="right_description">
+                        <div id="logo_section" class="logo_section">
+                            <img class="staff_logo" id="staff_logo" src="">
+                            <img id="update_logo_button" class="update_logo_button" src="../../../myndir/add.jpg">
+                        </div>
+                        <div id="photo_upload" class="photo_upload" style="display: none;">
+                            <progress value="0" max="100" id="uploader" class="progress_bar">0%</progress>
+                            <input type="file" value="upload" id="upload_button" class="file_in">
+                        </div>               
+                    </div>
                 </div>
             </div>
             <div class="navigation" id="navigation">
@@ -60,6 +75,8 @@
         </div>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+
         <script src="../starfsmenn_scripts.js"></script>
         <script src="staff_default_scripts.js"></script>
     </body>
