--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -20,12 +20,15 @@
             <div class="main">
                 <div class="tool_description" id="tool_description">
                     <div id="description" class="description">
-                        <p id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci incidunt molestiae porro odit illum modi fugit? Nemo, commodi. Atque natus reprehenderit architecto laborum ipsam cumque, facere veniam non possimus error.</p>
+                        <p id="description_text" class="description_text" contenteditable="true"></p>
+                        <div class="desc_buttons">
+                            <button id="desc_save_button" class="save_text_button" style="display: none;">Vista</button>
+                            <button id="desc_cancel_button" class="remove_button" style="display: none;">Hætta við</button> 
+                        </div>                   
                     </div>
                     <img id ="tool_logo" class="tool_logo" src="">
-                    <div>
-                        <img id="update_logo_button" class="update_logo_button" src="../../myndir/add.jpg">
-                    </div>
+                    <img id="update_logo_button" class="update_logo_button" src="../../myndir/add.jpg">
+                    
                 </div>
                 
                 <div id="photo_upload" class="photo_upload" style="display: none;">
@@ -38,8 +41,9 @@
                     <h1 class="tool_in_stock">Verkfæri er á lager</h1>
                     <h2>Skrá á starfsmann:</h2>
                     <div class="staff_nr">
-                        <span>Starfsmannanúmer (FRS-xxx):</span>
-                        <input type="textfield" id="user_name_in" class="user_name_in" value="FRS-">
+                        <span>Starfsmaður:</span>
+                        <input type="textfield" id="user_name_in" class="user_name_in" list="staff" autocomplete="off">
+                        <datalist id="staff"></datalist>
                     </div>
                     <div class="staff_nr">
                         <span>Verknúmer (R-xxxx):</span>
@@ -56,8 +60,9 @@
                     <h3 id="projectID_text" class="projectID_text"></h3>
                     <h2>Skrá á lager:</h2>
                     <div class="staff_nr">
-                        <span>Starfsmannanúmer (FRS-xxx):</span>
-                        <input type="textfield" id="return_user_name_in" class="user_name_in" value="FRS-">
+                        <span>Starfsmaður: </span>
+                        <input type="textfield" id="return_user_name_in" class="user_name_in" list="staff" autocomplete="off">
+                        <datalist id="staff"></datalist>
                     </div>
                     <button id="return_button" class="save_button"> Skrá inn</button>
                 </div>
