--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default.html
@@ -66,7 +66,7 @@
 
                 <div id="in_stock" class="in_stock">
                     <h2>Skrá á starfsmann:</h2>
-                    <div class="staff_nr">
+                    <div class="staff_nr" id="staff_nr">
                         <span>Starfsmaður:</span>
                         <input type="textfield" id="user_name_in" class="user_name_in" list="staff" autocomplete="off">
                         <datalist id="staff"></datalist>
@@ -79,7 +79,7 @@
                     <h3 id="loanDate_text" class="loanDate_text"></h3>
                     <h3 id="inUseBy_text"></h3>
                     <h2>Skrá á lager:</h2>
-                    <div class="staff_nr">
+                    <div class="staff_nr" id="staff_nr">
                         <span>Starfsmaður: </span>
                         <input type="textfield" id="return_user_name_in" class="user_name_in" list="staff" autocomplete="off">
                         <datalist id="staff"></datalist>
