--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default.html
@@ -32,7 +32,7 @@
                     <div id="description" class="description">
                         <div id="description_text_div" class="description_text_div">
                             <p id="description_text" class="description_text" contenteditable="true"></p>
-                            <div class="desc_buttons">
+                            <div class="desc_buttons" id="desc_buttons">
                                 <button id="desc_save_button" class="save_text_button" style="display: none;">Vista</button>
                                 <button id="desc_cancel_button" class="remove_button" style="display: none;">Hætta við</button> 
                             </div>  
