--- a/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
+++ b/Lokaverkefni_2019/vefsiða/verkfaeri/verkfaeri_default.html
@@ -35,7 +35,7 @@
                             <progress value="0" max="100" id="uploader" class="progress_bar">0%</progress>
                             <input type="file" value="upload" id="upload_button" class="file_in">
                         </div>
-                        <button class="history_button" id="history_button">Saga Viðhalds</button>                    
+                        <button class="history_button" id="history_button">Saga Verkfæris</button>                    
                     </div>
                 </div>
                 
